--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "start": "next dev",
     "test": "jest --watchAll",
+    "lint": "next lint",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "build": "next build"
@@ -36,6 +37,8 @@
     "@types/react-redux": "^7.1.18",
     "babel-jest": "^27.2.2",
     "babel-loader": "^8.2.2",
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.1.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.2.2",
     "react-test-renderer": "^17.0.2",
