--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "next lint",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
+    "export": "next export",
     "build": "next build"
   },
   "dependencies": {
