--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-config-next": "11.1.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.2.2",
+    "prettier": "^2.4.1",
     "react-test-renderer": "^17.0.2",
     "sass": "^1.42.1",
     "sass-loader": "10.1.1",
