--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "export": "next export",
-    "build": "next build"
+    "build": "next build",
+    "prod": "next start",
+    "format": "prettier --config .prettierrc '**/*.{ts,tsx,sass,scss,json}' --write"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.1",
@@ -41,6 +43,7 @@
     "babel-loader": "^8.2.2",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "eslint-config-prettier": "^8.3.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.2.2",
     "prettier": "^2.4.1",
